# feloopy

./: .gitignore  citation.cff  code_of_conduct.md  license.txt  manifest.in  pyproject.toml  readme.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
feloopy/: __init__.py  _version.py  cli.py  feloopy.py
feloopy/algorithms/exact/: multiobjective.py
feloopy/algorithms/heuristic/: DE.py  GA.py  GWO.py  SA.py  TS.py
feloopy/classes/: __init__.py  constraint_programming.py  event_variable.py  event_variable_collection.py  linearization.py  multidim_variable.py  multidim_variable_collection.py  normal_constraint.py  special_constraint.py  tensor_variable.py  tensor_variable_collection.py
feloopy/clitools/: __init__.py  pkg_manager_detector.py  utils.py
feloopy/generators/: __init__.py  init_generator.py  model_generator.py  result_generator.py  solution_generator.py  variable_generator.py
feloopy/generators/init/: casadi_init_generator.py  copt_init_generator.py  cplex_init_generator.py  gekko_init_generator.py  gurobi_init_generator.py  pulp_init_generator.py  pyomo_init_generator.py
feloopy/generators/model/: __init__.py  casadi_model_generator.py  copt_model_generator.py  cplex_cp_model_generator.py  cplex_model_generator.py  cvxpy_model_generator.py  cylp_model_generator.py  feloopy_model_generator.py  gamspy_model_generator.py  gekko_model_generator.py  gurobi_model_generator.py  highs_model_generator.py  jump_model_generator.py  linopy_model_generator.py  mathopt_model_generator.py  mealpy_model_generator.py  mip_model_generator.py  niapy_model_generator.py  ortools_cp_model_generator.py  ortools_model_generator.py  picos_model_generator.py  pulp_model_generator.py  pymprog_model_generator.py  pyomo_model_generator.py  pyoptinterface_model_generator.py  rsome_dro_model_generator.py  rsome_ro_model_generator.py  seeker_model_generator.py  xpress_model_generator.py
feloopy/generators/result/: __init__.py  casadi_result_generator.py  copt_result_generator.py  cplex_cp_result_generator.py  cplex_result_generator.py  cvxpy_result_generator.py  cylp_result_generator.py  gamspy_result_generator.py  gekko_result_generator.py  gurobi_result_generator.py  highs_result_generator.py  jump_result_generator.py  linopy_result_generator.py  mathopt_result_generator.py  mip_result_generator.py  ortools_cp_result_generator.py  ortools_result_generator.py  picos_result_generator.py  pulp_result_generator.py  pymprog_result_generator.py  pyomo_result_generator.py  pyoptinterface_result_generator.py  rsome_dro_result_generator.py  rsome_ro_result_generator.py  seeker_result_generator.py  xpress_result_generator.py
feloopy/generators/solution/: __init__.py  casadi_solution_generator.py  configurator.py  copt_solution_generator.py  cplex_cp_solution_generator.py  cplex_solution_generator.py  cvxpy_solution_generator.py  cylp_solution_generator.py  feloopy_solution_generator.py  gamspy_solution_generator.py  gekko_solution_generator.py  gurobi_solution_generator.py  highs_solution_generator.py  jump_solution_generator.py  linopy_solution_generator.py  mathopt_solution_generator.py  mealpy_solution_generator.py  mip_solution_generator.py  niapy_solution_generator.py  ortools_cp_solution_generator.py  ortools_solution_generator.py  picos_solution_generator.py  pulp_solution_generator.py  pygad_solution_generator.py  pymoo_solution_generator.py  pymprog_solution_generator.py  pymultiobjective_solution_generator.py  pyomo_solution_generator.py  pyoptinterface_solution_generator.py  rsome_dro_solution_generator.py  rsome_ro_solution_generator.py  scipy_solution_generator.py  seeker_solution_generator.py  xpress_solution_generator.py
feloopy/generators/variable/: casadi_variable_generator.py  copt_variable_generator.py  cplex_cp_variable_generator.py  cplex_variable_generator.py  cvxpy_variable_generator.py  cylp_variable_generator.py  gamspy_variable_generator.py  gekko_variable_generator.py  gurobi_variable_generator.py  highs_variable_generator.py  jump_variable_generator.py  linopy_variable_generator.py  mathopt_variable_generator.py  mip_variable_generator.py  ortools_cp_variable_generator.py  ortools_variable_generator.py  picos_variable_generator.py  pulp_variable_generator.py  pymprog_variable_generator.py  pyomo_variable_generator.py  pyoptinterface_variable_generator.py  rsome_dro_variable_generator.py  rsome_ro_variable_generator.py  seeker_variable_generator.py  xpress_variable_generator.py
feloopy/helpers/: __init__.py  context_manager.py  empty.py  error.py  formatter.py
feloopy/operators/: __init__.py  common.py  data_handler.py  exact.py  fix_operators.py  heuristic.py  heuristic_operators.py  math_operators.py  metrics.py  pareto.py  random_operators.py  set_operators.py  update_operators.py  validator.py
feloopy/visualizers/: __init__.py  canvas.py
